# cluster_analyzer

./: .gitignore  CMakeLists.txt  README.md
documentation/: README.md
include/: analyzer_gui.h  cluster_stuff.h  csv.h  data.h  extra_math.h  kmeans.h
src/: analyzer_gui.c  cluster_stuff.c  csv.c  data.c  kmeans.c  main.c  normal_dist_test.c  read_in_csv.c
